@@ -74,7 +74,7 @@ lantern
 	StrengthModifier = 50;
 	FormModifier = 30;
 	Price = 50;
-	BaseEmitation = rgb24(150, 150, 150);
+	BaseEmitation = rgb24(130, 130, 120);
 	NameSingular = "lantern";
         MainMaterialConfig == GLASS;
 	Alias == "light";
@@ -343,7 +343,6 @@ banana /* materialcontainer-> */
 	MaxCharges = 6;
 	MinCharges = 6;
 	CanBePiled = true;
-	BaseEmitation = rgb24(166, 112, 112);
 
 	Config BROKEN;
 	{
@@ -540,7 +539,7 @@ goldeneagleshirt /* armor->bodyarmor-> */
 	IsDestroyable = false;
 	IsMaterialChangeable = false;
 	DefaultMainVolume = 1000;
-	BaseEmitation = rgb24(166, 166, 166);
+	BaseEmitation = rgb24(112, 112, 166);
 	/* StrengthModifier not used, SV == 3 * (10 + Enchantment) */
 	NameSingular = "Shirt of the Golden Eagle";
 	MainMaterialConfig == CLOTH;
@@ -664,7 +663,7 @@ leftnutofpetrus /* nut-> */
 	StrengthModifier = 2500;
 	Score = 5000;
 	IsDestroyable = false;
-	BaseEmitation = rgb24(166, 166, 166);
+	BaseEmitation = rgb24(166, 112, 112);
 	Adjective = "left";
 	PostFix = "of Petrus";
 	ArticleMode = DEFINITEARTICLE;
@@ -813,7 +812,6 @@ kiwi
 	NameSingular = "kiwi";
 	MainMaterialConfig == KIWIFLESH;
 	Roundness = 80;
-	BaseEmitation = rgb24(112, 166, 112);
 }
 
 pineapple
@@ -829,7 +827,6 @@ pineapple
 	MainMaterialConfig == PINEAPPLEFLESH;
 	Roundness = 90;
 	IsTwoHanded = true;
-	BaseEmitation = rgb24(112, 112, 166);
 }
 
 palmbranch
@@ -938,7 +935,7 @@ oillamp
 	StrengthModifier = 50;
 	BitmapPos = 32, 48;
 	FormModifier = 30;
-	BaseEmitation = rgb24(128, 128, 128);
+	BaseEmitation = rgb24(120, 120, 100);
 	NameSingular = "lamp";
 	Adjective = "oil";
 	Article = "an";
@@ -1576,7 +1573,7 @@ flamingsword /* meleeweapon-> */
 	SecondaryMaterialConfig = { 3, BRONZE, IRON, MITHRIL; }
 	MaterialConfigChances = { 3, 150, 50, 10; }
 	Roundness = 10;
-	BaseEmitation = rgb24(160, 160, 160);
+	BaseEmitation = rgb24(160, 130, 100);
 	Price = 250;
 
 	Config BROKEN;
